--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.security.user.name=admin
 spring.security.user.password=123123
+
+security.jwt.token.secret-key=diefenthaeler
+security.jwt.token.token-expiration=300000
